# rag-document-qa-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/v1/: documents.py  health.py  query.py
app/core/: auth.py  config.py  error_handlers.py  lifespan.py
app/db/: base.py  session.py  tables.py
app/models/: __init__.py
app/schemas/: documents.py  errors.py  health.py  query.py
app/services/: chunking.py  document_store.py  embedding.py  ingestion.py  llm.py  parsing.py  rag.py  vector_store.py
tests/: __init__.py  conftest.py  test_auth.py  test_chunking.py  test_documents.py  test_embedding.py  test_health.py  test_integration.py  test_rag_pipeline.py
tests/fixtures/: sample.txt
